# ray-tracing-weekend

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: camera.rs  canvas.rs  color.rs  geom.rs  main.rs  material.rs  ray.rs
src/shapes/: mod.rs  sphere.rs
