[package]
name = "ray-tracing-weekend"
version = "0.1.0"
authors = ["Kenneth Graham <851943+klgraham@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
rand = "0.8.5"
pbr = "1.1.1"
rayon = "1.8.0"


